--- a/package.json
+++ b/package.json
@@ -7,5 +7,16 @@
     "test": "vitest"
   },
   "author": "https://github.com/niklas-may",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^20.12.7",
+    "eslint": "^9.0.0",
+    "eslint-config-unjs": "^0.2.1",
+    "typescript": "^5.4.5",
+    "vitest": "^1.5.0"
+  },
+  "dependencies": {
+    "groqfmt-nodejs": "^1.0.0",
+    "lodash": "^4.17.21"
+  }
 }
