--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@types/node": "^20.12.7",
     "eslint": "^9.0.0",
     "eslint-config-unjs": "^0.2.1",
+    "sanity": "^3.50.0",
     "typescript": "^5.4.5",
     "vitest": "^1.5.0"
   },
   "dependencies": {
+    "defu": "^6.1.4",
+    "glob": "^11.0.0",
     "groqfmt-nodejs": "^1.0.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "prettier": "^3.3.2"
   }
 }
