--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "scripts": {
     "test": "vitest",
     "build": "unbuild",
+    "lint": "eslint --cache --fix . && prettier -c src",
     "release": "pnpm test && changelogen --release && npm publish && git push --follow-tags"
   },
   "packageManager": "pnpm@9.5.0",
@@ -25,7 +26,7 @@
   "devDependencies": {
     "@types/lodash": "^4.17.7",
     "@types/node": "^20.14.11",
-    "eslint": "^8.57.0",
+    "eslint": "^9.7.0",
     "eslint-config-unjs": "^0.3.2",
     "typescript": "^5.5.3",
     "unbuild": "^2.0.0",
