--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
   "devDependencies": {
     "@types/lodash": "^4.17.7",
     "@types/node": "^20.14.11",
+    "@vitest/coverage-v8": "^2.0.3",
     "eslint": "^9.7.0",
     "eslint-config-unjs": "^0.3.2",
     "typescript": "^5.5.3",
     "unbuild": "^2.0.0",
-    "vitest": "^1.6.0"
+    "vitest": "^2.0.3"
   },
   "dependencies": {
     "defu": "^6.1.4",
