--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/lodash": "^4.17.7",
     "@types/node": "^20.14.11",
     "@vitest/coverage-v8": "^2.0.3",
+    "changelogen": "^0.5.5",
     "eslint": "^9.7.0",
     "eslint-config-unjs": "^0.3.2",
     "typescript": "^5.5.3",
