--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,16 @@
     "target": "ESNext",
     "module": "ESNext",
     "moduleResolution": "Node",
+    "resolveJsonModule": true,
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "rootDir": "/",
+    "baseUrl": "."
   },
-  "include": ["src", "test"]
+  "ts-node": {
+    "experimentalSpecifierResolution": "node",
+    "transpileOnly": true
+  }
 }
