refactor: created global context

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build": "unbuild",
     "dev:cli": "node --watch --loader ts-node/esm ./src/cli.ts generate -c ./playground/",
     "dev:test": "vitest",
-    "lint": "eslint --cache --fix . && prettier -c src",
+    "lint": "eslint --cache --fix . && prettier --write -c src",
     "release": "pnpm test && changelogen --release && npm publish && git push --follow-tags",
     "test": "vitest run"
   },
